# sort-rechnerarchitektur

./: .gitignore  CMakeLists.txt  README.md  bad.c  bubble.c  bubble.h  demo.c  dis.txt  insert.c  insert.h  main  main.c  merge.c  merge.h  pascal  pascal.c  quick.c  quick.h  setup.sh
bad.o.dSYM/Contents/: Info.plist
müller/: CMakeLists.txt  demo.c  demo.h  demo_preprocess.c  merge.h  quick.h
pascal/: 0.stat  1.stat  2.stat  3.stat  overhead0  overhead1  overhead2  pascal-O0.dump  pascal-O1.dump  pascal-O2.dump  pascal-O3.dump  pascal.c  pascalO0  pascalO1  pascalO2  pascalO3
pascal.o.dSYM/Contents/: Info.plist
pascal/iterative/: 0  0.d  0.stat  1  1.d  1.stat  2  2.stat  3.d  3.stat  pascal.c  pascal0  pascal1  pascal2
pascal/overhead/: 0  1  3  overhead.c
pascal/parallel/: parallel_recursive.c  pascalP  pascal_parallel.c
pascal/recursive/: 0.d  0.stat  1.d  1.stat  2.stat  3.d  3.stat  pascal.c  pascal0  pascal1  pascal2
